--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.pixplicity.sharp:library:1.1.0'
     implementation 'com.caverock:androidsvg-aar:1.4'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
 
 
     testImplementation 'junit:junit:4.12'
