--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,13 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-//    implementation 'com.squareup.picasso:picasso:2.71828'?
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    implementation 'com.pixplicity.sharp:library:1.1.0'
-    implementation 'com.caverock:androidsvg-aar:1.4'
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
 
-    implementation 'com.github.bumptech.glide:glide:3.5.2'
+    def glideVersion = "4.9.0"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
